# quackdb

./: CHECKPOINT.md  Cargo.toml  Makefile  README.md
benches/: micro.rs
hints/: LESSON_GUIDE.md  lesson_01.md  lesson_02.md  lesson_03.md  lesson_04.md  lesson_05.md  lesson_06.md  lesson_07.md  lesson_08.md  lesson_09.md  lesson_10.md  lesson_11.md  lesson_12.md  lesson_13.md  lesson_14.md  lesson_15.md  lesson_16.md  lesson_17.md  lesson_18.md  lesson_19.md  lesson_20.md  lesson_21.md  lesson_22.md  lesson_23.md  lesson_24.md  lesson_25.md  lesson_26.md  lesson_27.md  lesson_28.md  lesson_29.md  lesson_30.md  lesson_31.md  lesson_32.md  lesson_33.md  lesson_34.md  lesson_35.md
hints/concepts/: bitwise_ops.md  box_and_recursive_types.md  closures.md  collections.md  concurrency.md  enums_and_matching.md  error_handling.md  generics.md  io_and_serialization.md  iterators.md  lifetimes.md  ownership_and_borrowing.md  slices_and_bytes.md  string_types.md  structs_and_impl.md  trait_bounds.md  trait_objects.md  traits_and_derive.md  type_conversions.md  unsafe_rust.md
metrics/: profiles.md  rubric.md  scores.json
src/: arena.rs  chunk.rs  db.rs  lib.rs  simd.rs  types.rs  vector.rs
src/compression/: bitpack.rs  delta.rs  dictionary.rs  frame.rs  mod.rs  rle.rs
src/distributed/: coordinator.rs  mod.rs  partition.rs  planner.rs  shuffle.rs
src/execution/: adaptive.rs  exchange.rs  expression.rs  filter.rs  hash_aggregate.rs  hash_join.rs  mod.rs  pipeline.rs  projection.rs  scan.rs  sort.rs  sort_merge_join.rs  window.rs
src/optimizer/: cost_model.rs  join_order.rs  mod.rs  rules.rs  statistics.rs
src/parallel/: mod.rs  morsel.rs  scheduler.rs
src/planner/: binder.rs  catalog.rs  logical_plan.rs  mod.rs  physical_plan.rs
src/sql/: ast.rs  lexer.rs  mod.rs  parser.rs
src/storage/: buffer_pool.rs  columnar_file.rs  mod.rs  page.rs  reader.rs
src/transaction/: mod.rs  mvcc.rs  wal.rs
tests/: lesson_01_arena.rs  lesson_02_types.rs  lesson_03_vectors.rs  lesson_04_chunks.rs  lesson_05_rle.rs  lesson_06_dictionary.rs  lesson_07_bitpack_delta.rs  lesson_08_compression_frame.rs  lesson_09_pages.rs  lesson_10_buffer_pool.rs  lesson_11_columnar_write.rs  lesson_12_columnar_read.rs  lesson_13_expressions.rs  lesson_14_pipelines.rs  lesson_15_scan_filter_project.rs  lesson_16_hash_aggregate.rs  lesson_17_hash_join.rs  lesson_18_sort_merge_join.rs  lesson_19_external_sort.rs  lesson_20_sql_lexer.rs  lesson_21_sql_parser.rs  lesson_22_logical_plan.rs  lesson_23_binder_catalog.rs  lesson_24_physical_plan.rs  lesson_25_rule_optimizer.rs  lesson_26_cost_optimizer.rs  lesson_27_mvcc.rs  lesson_28_wal.rs  lesson_29_morsel_parallel.rs  lesson_30_window_functions.rs  lesson_31_partitioning.rs  lesson_32_distributed_plan.rs  lesson_33_shuffle_exchange.rs  lesson_34_adaptive_execution.rs  lesson_35_simd_vectorization.rs
